--- a/index.html
+++ b/index.html
@@ -972,41 +972,32 @@
             </div>
             <div class="media-29101 d-md-flex w-100">
               <div class="about-company__information-block__content">
-                <div class="block_inner" id="offers">
-                  <div class="offers__arrows"><img class="slider__arrow_left" id="offers_two" src="build/img/about-company/slider-arrow-left.svg" alt=" Стрелка влево"><img class="slider__arrow_right" id="offers_two" src="build/img/about-company/slider-arrow-left.svg"></div>
-                  <div class="slider offers__slider" id="offers_two">
-                    <div class="slider__container">
-                      <div class="slider__item">
-                        <div class="about-company__information-block">
-                          <div class="about-company__reviews-block">
-                            <div class="about-company__reviews-block_name-block"> 
-                              <div class="about-company__name">Раиса Михайлова</div>
-                              <div class="about-company__contract"> 24.06.2021     Договор №123456</div><a class="about-company__leave-review-block" href="#">
-                                <svg class="leave-review-icon" xmlns="http://www.w3.org/2000/svg" width="27" height="24" viewbox="0 0 27 24" fill="none">
-                                  <path fill-rule="evenodd" clip-rule="evenodd" d="M5 0.75H23.75C25 0.75 26.25 2 26.25 4.5V17C26.25 18.25 25 19.5 23.75 19.5H20C20 19.5 21.25 22 17.5 23.25C18.75 22 16.25 19.5 16.25 19.5H5C2.5 19.5 1.25 18.25 1.25 17V4.5C1.25 2 2.5 0.75 5 0.75V0.75Z" stroke="white" stroke-width="1.5" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
-                                  <path d="M6.25 6.99994H22.5" stroke="white" stroke-width="1.5" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
-                                  <path d="M6.25 10.75H13.75" stroke="white" stroke-width="1.5" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
-                                  <path d="M6.25 14.5H17.5" stroke="white" stroke-width="1.5" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
-                                </svg>
-                                <p class="about-company__leave-review">Оставить отзыв</p></a>
-                            </div>
-                            <div class="about-company__reviews-slider_block-comment">
-                              Огромное СПАСИБО всей команде Дизайн-Окно!В июне 2021 заказывала переостекление + отделка балкона первый раз и так все удачно
-                              - быстро, качественно. Все прошло отлично, в соответствии с условиями договора.
-                              Замерщик приехал как оговорено без опозданий, произвел замер лазерным уровнем, 
-                              все подробно рассказал по профилю и комплектующим. Предоплата составила 20%, 
-                              остаток - по факту. Соотношение цена/качество в сравнении с конкурентами.
-                              Доставка точно в срок, за 3 дня все установили. Итог - красивые окна. 
-                              Будем зимой проверять на прочность :)
-                              Большая благодарность за отлично проведённую работу!
-                              Замерщик по вызову пришёл быстро, всё хорошо объяснил , окна пришли в 
-                              соответствии со согласованной датой, поднятие в квартиру прошла очень хорошо , 
-                              монтажники справились со своей работой на отлично!  Все прошло в позитиве, 
-                              соотношение цены и качества хорошее. Отличная команда! Спасибо!!!
-                            </div>
-                          </div>
-                        </div>
-                      </div>
+                <div class="about-company__information-block">
+                  <div class="about-company__reviews-block">
+                    <div class="about-company__reviews-block_name-block"> 
+                      <div class="about-company__name">Раиса Михайлова</div>
+                      <div class="about-company__contract"> 24.06.2021     Договор №123456</div><a class="about-company__leave-review-block" href="#">
+                        <svg class="leave-review-icon" xmlns="http://www.w3.org/2000/svg" width="27" height="24" viewbox="0 0 27 24" fill="none">
+                          <path fill-rule="evenodd" clip-rule="evenodd" d="M5 0.75H23.75C25 0.75 26.25 2 26.25 4.5V17C26.25 18.25 25 19.5 23.75 19.5H20C20 19.5 21.25 22 17.5 23.25C18.75 22 16.25 19.5 16.25 19.5H5C2.5 19.5 1.25 18.25 1.25 17V4.5C1.25 2 2.5 0.75 5 0.75V0.75Z" stroke="white" stroke-width="1.5" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
+                          <path d="M6.25 6.99994H22.5" stroke="white" stroke-width="1.5" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
+                          <path d="M6.25 10.75H13.75" stroke="white" stroke-width="1.5" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
+                          <path d="M6.25 14.5H17.5" stroke="white" stroke-width="1.5" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
+                        </svg>
+                        <p class="about-company__leave-review">Оставить отзыв</p></a>
+                    </div>
+                    <div class="about-company__reviews-slider_block-comment">
+                      Огромное СПАСИБО всей команде Дизайн-Окно!В июне 2021 заказывала переостекление + отделка балкона первый раз и так все удачно
+                      - быстро, качественно. Все прошло отлично, в соответствии с условиями договора.
+                      Замерщик приехал как оговорено без опозданий, произвел замер лазерным уровнем, 
+                      все подробно рассказал по профилю и комплектующим. Предоплата составила 20%, 
+                      остаток - по факту. Соотношение цена/качество в сравнении с конкурентами.
+                      Доставка точно в срок, за 3 дня все установили. Итог - красивые окна. 
+                      Будем зимой проверять на прочность :)
+                      Большая благодарность за отлично проведённую работу!
+                      Замерщик по вызову пришёл быстро, всё хорошо объяснил , окна пришли в 
+                      соответствии со согласованной датой, поднятие в квартиру прошла очень хорошо , 
+                      монтажники справились со своей работой на отлично!  Все прошло в позитиве, 
+                      соотношение цены и качества хорошее. Отличная команда! Спасибо!!!
                       <div class="slider__item">
                         <div class="about-company__information-block__content"></div>
                         <div class="block_inner" id="offers">
@@ -1317,7 +1308,7 @@
         </div>
       </div>
     </div>
-    <div class="portfolio">
+    <div class="portfolio-block">
       <div class="portfolio__wrap"> 
         <div class="content-portfolio">
           <div class="block_inner" id="main">
@@ -1325,26 +1316,22 @@
               <div class="offers__header">
                 <p class="offers__title hidden_1000">Портфолио</p>
               </div>
-              <div class="slider offers__slider" id="offers_one">
-                <div class="slider__container">
-                  <div class="slider__item_portfolio"><a href="#"> <img class="portfolio-img" src="build/img/portfolio/room-1.png" alt="room"></a></div>
-                  <div class="slider__item_portfolio"><a href="#"> <img class="portfolio-img" src="build/img/portfolio/room-2.png" alt="room"></a></div>
-                  <div class="slider__item_portfolio"><a href="#"> <img class="portfolio-img" src="build/img/portfolio/room-3.png" alt="room"></a></div>
-                  <div class="slider__item_portfolio"><a href=""> <img class="portfolio-img" src="build/img/portfolio/room-4.png" alt="room"></a></div>
-                  <div class="slider__item_portfolio"><a href=""> <img class="portfolio-img" src="build/img/portfolio/room-1.png" alt="room"></a></div>
-                  <div class="slider__item_portfolio"><a href=""> <img class="portfolio-img" src="build/img/portfolio/room-2.png" alt="room"></a></div>
-                  <div class="slider__item_portfolio"><a href=""> <img class="portfolio-img" src="build/img/portfolio/room-3.png" alt="room"></a></div>
+              <div class="block_inner" id="offers">
+                <div class="offers__arrows"><img class="slider__arrow_left" id="offers_one" src="build/img/portfolio/arrow-left.png"><img class="slider__arrow_right" id="offers_one" src="build/img/portfolio/arrow-left.png"></div>
+                <div class="slider offers__slider" id="offers_one">
+                  <div class="slider__container">
+                    <div class="slider__item"><img src="build/img/portfolio/room-4.png"></div>
+                    <div class="slider__item"><img src="build/img/portfolio/room-1.png"></div>
+                    <div class="slider__item"><img src="build/img/portfolio/room-2.png"></div>
+                    <div class="slider__item"><img src="build/img/portfolio/room-3.png"></div>
+                    <div class="slider__item"><img src="build/img/portfolio/room-4.png"></div>
+                    <div class="slider__item"><img src="../../../../build/img/portfolio/room-1.png"></div>
+                    <div class="slider__item"><img src="../../../../build/img/portfolio/room-2.png"></div>
+                    <div class="slider__item"><img src="../../../../build/img/portfolio/room-3.png"></div>
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="offers__arrows">
-            <svg class="slider__arrow_left" id="offers_one" xmlns="http://www.w3.org/2000/svg" width="26" height="50" viewbox="0 0 26 50" fill="none">
-              <path d="M25 0.812988L1 24.813L25 48.813" stroke="black"></path>
-            </svg>
-            <svg class="slider__arrow_right" id="offers_one" xmlns="http://www.w3.org/2000/svg" width="26" height="50" viewbox="0 0 26 50" fill="none">
-              <path d="M25 0.812988L1 24.813L25 48.813" stroke="black"></path>
-            </svg>
           </div>
         </div>
         <div class="portfolio__map">
@@ -1537,7 +1524,9 @@
     <script src="build/sliders/slider_sertificates/slick-1.8.1/slick/slick.js"></script>
     <script src="build/sliders/slider_sertificates/slick-1.8.1/slick/sertificates.js"></script>
     <script src="build/js/pop_up.js"></script>
+    <script src="build/js/about-company-slider.js"></script>
     <script src="build/tabs/tabs_production-block/tab_production.js"></script>
+    <script src="build/sliders/slider_portfolio/slider-portfolio.js"></script>
     <script src="build/tabs/tabs_production-block/imageslidermaker-2/imageslidermaker-2/ism/js/ism-2.2.min.js"></script>
     <script type="text/javascript" src="build/sliders/slider_portfolio/slider-portfolio.js"></script>
     <script>
