--- a/index.html
+++ b/index.html
@@ -1325,9 +1325,9 @@
                     <div class="slider__item"><img src="build/img/portfolio/room-2.png"></div>
                     <div class="slider__item"><img src="build/img/portfolio/room-3.png"></div>
                     <div class="slider__item"><img src="build/img/portfolio/room-4.png"></div>
-                    <div class="slider__item"><img src="../../../../build/img/portfolio/room-1.png"></div>
-                    <div class="slider__item"><img src="../../../../build/img/portfolio/room-2.png"></div>
-                    <div class="slider__item"><img src="../../../../build/img/portfolio/room-3.png"></div>
+                    <div class="slider__item"><img src="build/img/portfolio/room-1.png"></div>
+                    <div class="slider__item"><img src="build/img/portfolio/room-2.png"></div>
+                    <div class="slider__item"><img src="build/img/portfolio/room-3.png"></div>
                   </div>
                 </div>
               </div>
