Добавление pop-up для кнопки 'оформить заявку на замер'

--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
                 <div>
                   <div class="production-block__tabs-production-describe">
                     <div class="production-block__tabs-production__wrap">
-                      <div class="about-company__information-block"><img class="production-block__picture" src="../../../build/img/production-block/picture.png" alt=""></div>
+                      <div class="about-company__information-block"><img class="production-block__picture" src="build/img/production-block/picture.png" alt=""></div>
                       <div class="about-company__tabs-production_information">
                         <p class="production-block__headline">Rehau Blitz New</p>
                         <p class="production-block__describe-text">&Scy;&ocy;&khcy;&rcy;&acy;&ncy;&yacy;&yucy;&tcy; &tcy;&iecy;&pcy;&lcy;&ocy; &vcy; &dcy;&ocy;&mcy;&iecy;, &zcy;&acy;&shchcy;&icy;&shchcy;&acy;&yucy;&tcy; &ocy;&tcy; &shcy;&ucy;&mcy;&acy; &icy; &vcy;&pcy;&icy;&scy;&ycy;&vcy;&acy;&yucy;&tcy;&scy;&yacy; &vcy; &lcy;&yucy;&bcy;&ocy;&jcy; &icy;&ncy;&tcy;&iecy;&rcy;&softcy;&iecy;&rcy;. &Pcy;&rcy;&acy;&kcy;&tcy;&icy;&chcy;&ncy;&ycy;&jcy; &vcy;&ycy;&bcy;&ocy;&rcy;</p>
@@ -575,7 +575,7 @@
                 <div>
                   <div class="production-block__tabs-production-describe">
                     <div class="production-block__tabs-production__wrap">
-                      <div class="about-company__information-block"><img class="production-block__picture" src="../../../build/img/production-block/picture.png" alt=""></div>
+                      <div class="about-company__information-block"><img class="production-block__picture" src="build/img/production-block/picture.png" alt=""></div>
                       <div class="about-company__tabs-production_information">
                         <p class="production-block__headline">Rehau Blitz New</p>
                         <p class="production-block__describe-text">&Scy;&ocy;&khcy;&rcy;&acy;&ncy;&yacy;&yucy;&tcy; &tcy;&iecy;&pcy;&lcy;&ocy; &vcy; &dcy;&ocy;&mcy;&iecy;, &zcy;&acy;&shchcy;&icy;&shchcy;&acy;&yucy;&tcy; &ocy;&tcy; &shcy;&ucy;&mcy;&acy; &icy; &vcy;&pcy;&icy;&scy;&ycy;&vcy;&acy;&yucy;&tcy;&scy;&yacy; &vcy; &lcy;&yucy;&bcy;&ocy;&jcy; &icy;&ncy;&tcy;&iecy;&rcy;&softcy;&iecy;&rcy;. &Pcy;&rcy;&acy;&kcy;&tcy;&icy;&chcy;&ncy;&ycy;&jcy; &vcy;&ycy;&bcy;&ocy;&rcy;</p>
@@ -613,7 +613,7 @@
                 <div>
                   <div class="production-block__tabs-production-describe">
                     <div class="production-block__tabs-production__wrap">
-                      <div class="about-company__information-block"><img class="production-block__picture" src="../../../build/img/production-block/picture.png" alt=""></div>
+                      <div class="about-company__information-block"><img class="production-block__picture" src="build/img/production-block/picture.png" alt=""></div>
                       <div class="about-company__tabs-production_information">
                         <p class="production-block__headline">Rehau Blitz New</p>
                         <p class="production-block__describe-text">&Scy;&ocy;&khcy;&rcy;&acy;&ncy;&yacy;&yucy;&tcy; &tcy;&iecy;&pcy;&lcy;&ocy; &vcy; &dcy;&ocy;&mcy;&iecy;, &zcy;&acy;&shchcy;&icy;&shchcy;&acy;&yucy;&tcy; &ocy;&tcy; &shcy;&ucy;&mcy;&acy; &icy; &vcy;&pcy;&icy;&scy;&ycy;&vcy;&acy;&yucy;&tcy;&scy;&yacy; &vcy; &lcy;&yucy;&bcy;&ocy;&jcy; &icy;&ncy;&tcy;&iecy;&rcy;&softcy;&iecy;&rcy;. &Pcy;&rcy;&acy;&kcy;&tcy;&icy;&chcy;&ncy;&ycy;&jcy; &vcy;&ycy;&bcy;&ocy;&rcy;</p>
@@ -651,7 +651,7 @@
                 <div>
                   <div class="production-block__tabs-production-describe">
                     <div class="production-block__tabs-production__wrap">
-                      <div class="about-company__information-block"><img class="production-block__picture" src="../../../build/img/production-block/picture.png" alt=""></div>
+                      <div class="about-company__information-block"><img class="production-block__picture" src="build/img/production-block/picture.png" alt=""></div>
                       <div class="about-company__tabs-production_information">
                         <p class="production-block__headline">Rehau Blitz New</p>
                         <p class="production-block__describe-text">&Scy;&ocy;&khcy;&rcy;&acy;&ncy;&yacy;&yucy;&tcy; &tcy;&iecy;&pcy;&lcy;&ocy; &vcy; &dcy;&ocy;&mcy;&iecy;, &zcy;&acy;&shchcy;&icy;&shchcy;&acy;&yucy;&tcy; &ocy;&tcy; &shcy;&ucy;&mcy;&acy; &icy; &vcy;&pcy;&icy;&scy;&ycy;&vcy;&acy;&yucy;&tcy;&scy;&yacy; &vcy; &lcy;&yucy;&bcy;&ocy;&jcy; &icy;&ncy;&tcy;&iecy;&rcy;&softcy;&iecy;&rcy;. &Pcy;&rcy;&acy;&kcy;&tcy;&icy;&chcy;&ncy;&ycy;&jcy; &vcy;&ycy;&bcy;&ocy;&rcy;</p>
@@ -1285,12 +1285,10 @@
     <script src="build/tabs/carousel-18/js/bootstrap.min.js"></script>
     <script src="build/tabs/carousel-18/js/owl.carousel.min.js"></script>
     <script src="build/tabs/carousel-18/js/main.js"></script>
-    <script src="build/sliders/slider_sertificates/slick-1.8.1/slick/slick.js"></script>
-    <script src="build/sliders/slider_sertificates/slick-1.8.1/slick/sertificates.js"></script>
+    <script src="build/sliders/slick_slider/slick/slick.js"></script>
     <script src="build/js/pop_up.js"></script>
     <script src="build/tabs/carousel-18/js/tab-production.js"></script>
     <script src="build/sliders/slider_portfolio/slider-portfolio.js"></script>
-    <script src="build/tabs/tabs_production-block/imageslidermaker-2/imageslidermaker-2/ism/js/ism-2.2.min.js"></script>
     <script type="text/javascript" src="build/sliders/slider_portfolio/slider-portfolio.js"></script>
     <script type="text/javascript" src="build/sliders/slider_review/slick-1.8.1/slick/slick.js"></script>
     <script src="build/Accordeon/accordeon.js"></script>
